--- a/css/admin.css
+++ b/css/admin.css
@@ -52,3 +52,42 @@
 	margin-top: 4;
 	padding-bottom: 4;
 }
+
+/*	EN: new fork start here. if want old style - delete all below 
+	здесь начинается модификация [729]jetsam. Если хотите старый стиль 
+		- просто удалите все, что ниже
+*/
+
+.ss-set-alt{
+	min-width:480px;
+	max-width:800px;
+}
+
+
+.ss-set-alt fieldset{
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-top-style: solid;
+	border-top-width: 1px;
+
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+
+	box-shadow: 4px 1px 4px rgba(0,0,0,0.2);
+}
+.ss-set-alt .button-primary{
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	box-shadow: 4px 1px 4px rgba(0,0,0,0.4);
+}
+.ss-set-alt legend{
+	padding: 5px;
+	border: 0;
+}
+
+.ss-set-alt-lrep{
+}
